src/wrapper.zig

pub extern fn ffgisz(fptr: [*c]fitsfile, nlen: c_int, naxes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgiszll(fptr: [*c]fitsfile, nlen: c_int, naxes: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffmahd(fptr: [*c]fitsfile, hdunum: c_int, exttype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffmrhd(fptr: [*c]fitsfile, hdumov: c_int, exttype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffmnhd(fptr: [*c]fitsfile, exttype: c_int, hduname: [*c]u8, hduvers: c_int, status: [*c]c_int) c_int;
pub extern fn ffthdu(fptr: [*c]fitsfile, nhdu: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffcrhd(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffcrim(fptr: [*c]fitsfile, bitpix: c_int, naxis: c_int, naxes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffcrimll(fptr: [*c]fitsfile, bitpix: c_int, naxis: c_int, naxes: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffcrtb(fptr: [*c]fitsfile, tbltype: c_int, naxis2: LONGLONG, tfields: c_int, ttype: [*c][*c]u8, tform: [*c][*c]u8, tunit: [*c][*c]u8, extname: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffiimg(fptr: [*c]fitsfile, bitpix: c_int, naxis: c_int, naxes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffiimgll(fptr: [*c]fitsfile, bitpix: c_int, naxis: c_int, naxes: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffitab(fptr: [*c]fitsfile, naxis1: LONGLONG, naxis2: LONGLONG, tfields: c_int, ttype: [*c][*c]u8, tbcol: [*c]c_long, tform: [*c][*c]u8, tunit: [*c][*c]u8, extname: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffibin(fptr: [*c]fitsfile, naxis2: LONGLONG, tfields: c_int, ttype: [*c][*c]u8, tform: [*c][*c]u8, tunit: [*c][*c]u8, extname: [*c]const u8, pcount: LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffrsim(fptr: [*c]fitsfile, bitpix: c_int, naxis: c_int, naxes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffrsimll(fptr: [*c]fitsfile, bitpix: c_int, naxis: c_int, naxes: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffdhdu(fptr: [*c]fitsfile, hdutype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffcopy(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, morekeys: c_int, status: [*c]c_int) c_int;
pub extern fn ffcpfl(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, prev: c_int, cur: c_int, follow: c_int, status: [*c]c_int) c_int;
pub extern fn ffcphd(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffcpdt(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffchfl(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffcdfl(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffwrhdu(fptr: [*c]fitsfile, outstream: [*c]FILE, status: [*c]c_int) c_int;
pub extern fn ffrdef(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffrhdu(fptr: [*c]fitsfile, hdutype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffhdef(fptr: [*c]fitsfile, morekeys: c_int, status: [*c]c_int) c_int;
pub extern fn ffpthp(fptr: [*c]fitsfile, theap: c_long, status: [*c]c_int) c_int;
pub extern fn ffcsum(fptr: [*c]fitsfile, nrec: c_long, sum: [*c]c_ulong, status: [*c]c_int) c_int;
pub extern fn ffesum(sum: c_ulong, complm: c_int, ascii: [*c]u8) void;
pub extern fn ffdsum(ascii: [*c]u8, complm: c_int, sum: [*c]c_ulong) c_ulong;
pub extern fn ffpcks(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffupck(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffvcks(fptr: [*c]fitsfile, datastatus: [*c]c_int, hdustatus: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcks(fptr: [*c]fitsfile, datasum: [*c]c_ulong, hdusum: [*c]c_ulong, status: [*c]c_int) c_int;
pub extern fn ffpscl(fptr: [*c]fitsfile, scale: f64, zeroval: f64, status: [*c]c_int) c_int;
pub extern fn ffpnul(fptr: [*c]fitsfile, nulvalue: LONGLONG, status: [*c]c_int) c_int;
pub extern fn fftscl(fptr: [*c]fitsfile, colnum: c_int, scale: f64, zeroval: f64, status: [*c]c_int) c_int;
pub extern fn fftnul(fptr: [*c]fitsfile, colnum: c_int, nulvalue: LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffsnul(fptr: [*c]fitsfile, colnum: c_int, nulstring: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgcno(fptr: [*c]fitsfile, casesen: c_int, templt: [*c]u8, colnum: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcnn(fptr: [*c]fitsfile, casesen: c_int, templt: [*c]u8, colname: [*c]u8, colnum: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgtcl(fptr: [*c]fitsfile, colnum: c_int, typecode: [*c]c_int, repeat: [*c]c_long, width: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgtclll(fptr: [*c]fitsfile, colnum: c_int, typecode: [*c]c_int, repeat: [*c]LONGLONG, width: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffeqty(fptr: [*c]fitsfile, colnum: c_int, typecode: [*c]c_int, repeat: [*c]c_long, width: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffeqtyll(fptr: [*c]fitsfile, colnum: c_int, typecode: [*c]c_int, repeat: [*c]LONGLONG, width: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffgncl(fptr: [*c]fitsfile, ncols: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgnrw(fptr: [*c]fitsfile, nrows: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgnrwll(fptr: [*c]fitsfile, nrows: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffgacl(fptr: [*c]fitsfile, colnum: c_int, ttype: [*c]u8, tbcol: [*c]c_long, tunit: [*c]u8, tform: [*c]u8, tscal: [*c]f64, tzero: [*c]f64, tnull: [*c]u8, tdisp: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgbcl(fptr: [*c]fitsfile, colnum: c_int, ttype: [*c]u8, tunit: [*c]u8, dtype: [*c]u8, repeat: [*c]c_long, tscal: [*c]f64, tzero: [*c]f64, tnull: [*c]c_long, tdisp: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgbclll(fptr: [*c]fitsfile, colnum: c_int, ttype: [*c]u8, tunit: [*c]u8, dtype: [*c]u8, repeat: [*c]LONGLONG, tscal: [*c]f64, tzero: [*c]f64, tnull: [*c]LONGLONG, tdisp: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgrsz(fptr: [*c]fitsfile, nrows: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgcdw(fptr: [*c]fitsfile, colnum: c_int, width: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpxv(fptr: [*c]fitsfile, datatype: c_int, firstpix: [*c]c_long, nelem: LONGLONG, nulval: ?*anyopaque, array: ?*anyopaque, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpxvll(fptr: [*c]fitsfile, datatype: c_int, firstpix: [*c]LONGLONG, nelem: LONGLONG, nulval: ?*anyopaque, array: ?*anyopaque, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpxf(fptr: [*c]fitsfile, datatype: c_int, firstpix: [*c]c_long, nelem: LONGLONG, array: ?*anyopaque, nullarray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpxfll(fptr: [*c]fitsfile, datatype: c_int, firstpix: [*c]LONGLONG, nelem: LONGLONG, array: ?*anyopaque, nullarray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsv(fptr: [*c]fitsfile, datatype: c_int, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: ?*anyopaque, array: ?*anyopaque, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpv(fptr: [*c]fitsfile, datatype: c_int, firstelem: LONGLONG, nelem: LONGLONG, nulval: ?*anyopaque, array: ?*anyopaque, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpf(fptr: [*c]fitsfile, datatype: c_int, firstelem: LONGLONG, nelem: LONGLONG, array: ?*anyopaque, nullarray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvb(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: u8, array: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvsb(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: i8, array: [*c]i8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvui(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_ushort, array: [*c]c_ushort, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvi(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_short, array: [*c]c_short, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvuj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_ulong, array: [*c]c_ulong, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_long, array: [*c]c_long, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvujj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: ULONGLONG, array: [*c]ULONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvjj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: LONGLONG, array: [*c]LONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvuk(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_uint, array: [*c]c_uint, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvk(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_int, array: [*c]c_int, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpve(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: f32, array: [*c]f32, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpvd(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, nulval: f64, array: [*c]f64, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfb(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]u8, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfsb(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]i8, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfui(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_ushort, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfi(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_short, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfuj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_ulong, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_long, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfujj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]ULONGLONG, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfjj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]LONGLONG, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfuk(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_uint, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfk(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_int, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfe(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f32, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgpfd(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f64, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2db(fptr: [*c]fitsfile, group: c_long, nulval: u8, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2dsb(fptr: [*c]fitsfile, group: c_long, nulval: i8, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]i8, anynul: [*c]c_int, status: [*c]c_int) c_int;
